--- a/index.css
+++ b/index.css
@@ -156,7 +156,8 @@ hr {
   font-family: "Poppins", sans-serif;
 }
 .nav_bottombar_left a:hover {
-  color: black;
+  color: #07adf4;
+  background-color: #07adf4;
 }
 .nav_bottombar_right img {
   height: 22px;
@@ -214,6 +215,9 @@ button {
   text-align: center;
   letter-spacing: 1.2px;
   box-shadow: 2px 2px 6px rgb(163, 159, 159), -2px -2px 5px rgb(163, 159, 159);
+}
+button:hover{
+  background-color: #12718e;
 }
 .banner_button {
   margin-top: 13px;
@@ -499,6 +503,9 @@ button {
   gap: 40px;
   margin-top: 40px;
 }
+#service_section_left_bottom_conatiner img{
+  cursor: pointer;
+}
 #service_section_first_card {
   height: 400px;
   width: 300px;
@@ -704,6 +711,18 @@ button {
   gap: 20px;
   justify-content: center;
 }
+#gallary_first_conatiner img{
+  cursor: pointer;
+}
+#gallary_second_conatiner img{
+  cursor: pointer;
+}
+#gallary_first_conatiner img:hover{
+  transform: scale(1.01);
+}
+#gallary_second_conatiner img:hover{
+  transform: scale(1.01);
+}
 /*Gallary section css end*/
 
 /*our team section css start*/
@@ -739,6 +758,9 @@ button {
   gap: 20px;
   margin-bottom: 70px;
 }
+#team_bottom_container img{
+  cursor: pointer;
+} 
 .team_first_card_container {
   /* border: 2px solid red; */
   height: 380px;
